--- a/style.css
+++ b/style.css
@@ -55,6 +55,13 @@ body{
     margin-left:612px;
     
 }
+@media only screen and(max-width:600px)
+{
+    .icons{
+    font-size:35px;
+    margin-left:50%;
+    }
+}
 #fb{
     color: dodgerblue;
 }
