--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body{
     font-size:35px;
     margin-left:50%;
     margin-right:50%;
+    padding-left:50%;
+    padding-right:50%;
     }
 }
 #fb{
