--- a/style.css
+++ b/style.css
@@ -59,10 +59,7 @@ body{
 {
     .icons{
     font-size:35px;
-    margin-left:50%;
-    margin-right:50%;
-    padding-left:50%;
-    padding-right:50%;
+    margin-left:300px;
     }
 }
 #fb{
